--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ main {
 /* Post Grid Styles */
 .post-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Adaptable grid */
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* Adaptable grid */
   gap: 20px;
   margin-top: 20px;
 }
@@ -120,17 +120,20 @@ main {
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
   text-align: center;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  height: 300px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  overflow: hidden;
+  justify-content: flex-start;
   border: 1px solid #ddd;
+  min-height: 350px;
 }
+.post-card p {
+  color: #555;
+  font-size: 1em;
+  margin-top: 10px;
+  line-height: 1.4; /* This is for readability */
+  flex-grow: 1; /* Allow the paragraph to grow and take available space */
+  margin-bottom: 20px; /* Space between text and other elements */
 
-.post-card:hover {
-  transform: translateY(-10px);
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2); /* Stronger hover shadow */
 }
 
 .post-image {
@@ -179,3 +182,4 @@ footer {
     grid-template-columns: 1fr;
   }
 }
+
