--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ section {
 }
 
 #pictures .picture-wall {
-  background-image: url('https://raw.githubusercontent.com/static-chaos/blog/refs/heads/main/images/brick1.jpg');
+  background-image: #f2f2f2; 
   background-size: cover;
   background-position: center;
   padding: 40px 20px;
@@ -354,6 +354,7 @@ nav a.active {
   transform: scale(1.05); /* Slight zoom effect */
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3); /* Stronger shadow on hover */
 }
+
 
 
 
