--- a/css/style.css
+++ b/css/style.css
@@ -292,13 +292,14 @@ section {
 }
 
 .story-text {
-  margin-top: 20px;
+  margin-bottom: 10px;
   font-size: 1.2rem;
-  color: #555;
-  background-color: rgba(0, 0, 0, 0.6);  /* Optional dark background */
+  color: #333;
+  background-color: transparent;  /* Optional dark background */
   padding: 10px;
   border-radius: 8px;
-  max-width: 90%;  /* Prevent caption overflow */
+  max-width: 90%; /* Prevent caption overflow */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
 .close-btn {
@@ -373,6 +374,7 @@ nav a.active {
   transform: scale(1.05); /* Slight zoom effect */
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3); /* Stronger shadow on hover */
 }
+
 
 
 
