--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,7 @@ section {
 }
 
 .lightbox-content {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.9);;
   padding: 20px;
   border-radius: 10px;
    max-width: 90%; /* Increased from 80% to give more room for larger images */
@@ -271,6 +271,7 @@ section {
   align-items: center;
   overflow: hidden;
   max-height: 90vh; /* Limit height to prevent overflow */
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
 }
 
 .full-img {
@@ -280,6 +281,7 @@ section {
   object-fit: contain;
   border-radius: 8px;
   transition: transform 0.2s ease;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 .caption-container {
   width: 100%;
@@ -295,11 +297,12 @@ section {
   margin-bottom: 10px;
   font-size: 1.2rem;
   color: #333;
-  background-color: transparent;  /* Optional dark background */
-  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.8)  /* Optional dark background */
+  padding: 15px;
   border-radius: 8px;
   max-width: 90%; /* Prevent caption overflow */
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
 }
 
 .close-btn {
@@ -374,6 +377,7 @@ nav a.active {
   transform: scale(1.05); /* Slight zoom effect */
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3); /* Stronger shadow on hover */
 }
+
 
 
 
