--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ section {
 }
 
 .lightbox-content {
-  background-color: rgba(255, 255, 255, 0.9);;
+  background-color: rgba(0, 0, 0, 0.8); /* Darker background */
   padding: 20px;
   border-radius: 10px;
    max-width: 90%; /* Increased from 80% to give more room for larger images */
@@ -372,6 +372,7 @@ section {
   transform: scale(1.05); /* Slight zoom effect */
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3); /* Stronger shadow on hover */
 }
+
 
 
 
