--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@ section {
 .caption {
   font-size: 1.1rem;
   padding: 10px;
-  color: #333;
+  color: #white;
   text-align: center;
 }
 
@@ -372,6 +372,7 @@ section {
   transform: scale(1.05); /* Slight zoom effect */
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3); /* Stronger shadow on hover */
 }
+
 
 
 
