--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ section {
   background-color: #f1f8e9;
 }
 
-#pictures .picture-wall {
+#pictures .capturesque {
   background-color: #f2f2f2; 
   background-size: cover;
   background-position: center;
@@ -184,7 +184,7 @@ section {
 }
 
 /* Picture Wall */
-.picture-wall {
+.capturesque {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -331,7 +331,7 @@ section {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   }
 
- .picture-wall {
+ .capturesque {
     display: flex;
     justify-content: center; /* Center images on smaller screens */
     gap: 20px;
@@ -343,7 +343,7 @@ section {
     grid-template-columns: 1fr;
   }
 
-  .picture-wall {
+  .capturesque {
     grid-template-columns: 1fr;
   }
 }
@@ -374,6 +374,7 @@ section {
   transform: scale(1.05); /* Slight zoom effect */
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3); /* Stronger shadow on hover */
 }
+
 
 
 
