--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ section {
 }
 
 #pictures .capturesque {
-  background-color: #f2f2f2; 
+  background-color: #e6e6fa;    
   background-size: cover;
   background-position: center;
   padding: 40px 20px;
@@ -374,6 +374,7 @@ section {
   transform: scale(1.05); /* Slight zoom effect */
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3); /* Stronger shadow on hover */
 }
+
 
 
 
